# libOrange

./: .atom-build.json  .clang_complete  .gitignore  CMakeLists.txt  build.sh  clangtest.cpp  debugbuild.sh  wscript
MapViewer/: CMakeLists.txt
MapViewer/include/: planet.h  planetInterface.hpp
MapViewer/src/: main.cpp  planet.c  planetInterface.cpp
libOrange/: CMakeLists.txt  wscript
libOrange/include/Orange/: Types.hpp
libOrange/include/Orange/gl/: GLContext.hpp  GLResource.hpp
libOrange/include/Orange/graphics/: FrameBuffer.hpp  Mesh.hpp  Shader.hpp  SpriteBatch.hpp  Texture.hpp  TextureAtlas.hpp
libOrange/include/Orange/input/: Input.hpp
libOrange/include/Orange/logging/: ConsoleLogListener.hpp  FileLogListener.hpp  Logging.hpp
libOrange/include/Orange/maths/: Maths.hpp
libOrange/include/Orange/priv/input/: InputImpl.hpp
libOrange/include/Orange/priv/linux/: LinuxGLContext.hpp  LinuxInputImpl.hpp  LinuxTimerImpl.hpp  LinuxWindowImpl.hpp
libOrange/include/Orange/priv/threads/: StdThreadImpl.hpp  (+1 more)
libOrange/include/Orange/threads/: Thread.hpp
libOrange/include/Orange/timing/: Timer.hpp
libOrange/include/Orange/util/: FPSDebugCamera.hpp  Filesystem.hpp  NoCopy.hpp
libOrange/include/Orange/window/: Window.hpp
libOrange/src/Orange/gl/: GLContext.cpp  GLResource.cpp
libOrange/src/Orange/graphics/: FrameBuffer.cpp  Mesh.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp  TextureAtlas.cpp
libOrange/src/Orange/logging/: ConsoleLogListener.cpp  FileLogListener.cpp  Logging.cpp
libOrange/src/Orange/threads/: Thread.cpp
libOrange/src/Orange/timing/: Timer.cpp
libOrange/src/Orange/util/: FPSDebugCamera.cpp
libOrange/src/Orange/window/: Window.cpp
orangeTest/: CMakeLists.txt  wscript
orangeTest/src/: main.cpp
(+33 files in other folders)
